@@ -1,3 +1,8 @@
+2006-12-27  Akim Demaille  <akim.demaille@free.fr>
+
+	Produce a Rst ready log
+	* check.mk: here.
+
 2006-12-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	More restyling.
